--- a/styles.css
+++ b/styles.css
@@ -1,86 +1,62 @@
 body{
-    background-color: #e6ffe6;
+    background-color: rgb(64, 61, 74);
 }
 
-.message{
-    background-color: rgb(75, 70, 89);
-    height: 5vh;
-    border-width: 1.5px;
-    border-style: solid;
-    border-color: rgb(75, 70, 89);
-    margin-top: 10px;
-    color: white;
-    overflow: hidden;
-    box-shadow: 0px 6px 1px -5px rgba(255,255,255,0.75);
-}
-.row{
-    min-height: 100vh;
-}
-
-.title-row{
-    color: white;
-}
 
 .inbox-icon{
-    background-color: rgb(110, 67, 67);
-    width: 4vh;
-    height: 4vh;
-    border-radius: 50%;
+    background-color: rgba(110, 67, 67, 0.375);
+    width: 150px;
+    height: 150px;
+    border-radius: 75px;
     text-align: center;
     font-size: 2.5vh;
-    margin-left: 20px;
-    margin-top: 3px;
+    margin-right: 22px;
+    margin-top: 15px;
     border-style: solid;
     border-color: rgb(194, 194, 194);
-    border-width: .2vh;
+    border-width: .2rem;
+    color: rgba(255, 255, 255, 0.898);
+    font-size: xx-large;
+}
+.container-fluid{
+    background-color: rgb(64, 61, 74);
 }
 
-.email-message-top-bar{
-    background-color: rgb(38, 35, 45);
-    height: 2vh;
-    min-width: 100%;
-
-}
-
-#main-row{
-    background-color: rgb(58, 54, 69);
-}
-
-#new-message{
-    height: 400px;
-    background-color: rgb(59, 58, 75);
+.title{
     color: white;
 }
 
-#new-message-tab{
-    background-color: rgb(83, 77, 102);
-    color: white;
+.heading{
+    color: rgba(255, 255, 255, 0.91);
+    margin-left: 10px;
+    font-size: 25px;
+    font-weight: bold;
+    background-color: rgba(87, 87, 87, 0.146);
 }
 
-#email-inbox{
-    border-color: rgb(49, 45, 59);
-    border-style: solid;
-    background-color: rgb(58, 54, 69);
-    border-top: hidden;
+.heading-text{
+    color: rgb(255, 255, 255);
+}
+.nav-link{
+    color: white!important;
 }
 
-#email-select{
-    border-color: rgb(49, 45, 59);
-    border-style: solid;
-    background-color: rgb(58, 54, 69);
-    border-top: hidden;
+.active {
+    background-color: rgb(112, 105, 134)!important;
+    box-shadow: 0px 11px 0px -10px rgba(255,255,255,0.75);
 }
 
-#email-message{
-    border-color: rgb(49, 45, 59);
-    border-style: hidden;
-    background-color: rgb(58, 54, 69);
-    margin-bottom: 10px;
+.main-row{
+    height: 100vh;
 }
 
-@media (hover: hover) {
-    .message:hover {
-        background-color: rgb(44, 41, 53);
-        border-radius: 10px;
-    }
+.current-message{
+    width: 100%;
+    height: 50%;
+    border-radius: 2.5%;
+    background-color: rgba(79, 76, 91, 0.372);
+}
+
+html{
+    background-color: rgb(64, 61, 74);
 }
